k8s/base/checkout/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkout
spec:
  type: ClusterIP
  selector:
    app: checkout
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
